// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pruebas del componente GifGrid Debe de mostrar items cuando se cargan imagenes con useFetchGifs 1`] = `
<Fragment>
  <h3
    className="animate__animated animate__fadeIn"
  >
    Evangelion
  </h3>
  <div
    className="card-grid"
  >
    <GifGridItem
      id={5346457457}
      key="5346457457"
      title="titulo"
      url="https://gfs.com/5346457457.gif"
    />
    <GifGridItem
      id={53464346346347460}
      key="53464346346347460"
      title="titulo555"
      url="https://gfs.com/534546457457.gif"
    />
  </div>
</Fragment>
`;

exports[`Pruebas del componente GifGrid Debería hacer match con el snapshop 1`] = `
<Fragment>
  <h3
    className="animate__animated animate__fadeIn"
  >
    Evangelion
  </h3>
  <p>
    Cargando...
  </p>
  <div
    className="card-grid"
  />
</Fragment>
`;
